fixed Nullpointer exception in HTMLGenerator and Serializer; formatted group list view and parsed comments to extract human readable form of comment for html data #244

--- a/backmeup-facebook-plugin/src/main/resources/htmlgenerator/css/main.css
+++ b/backmeup-facebook-plugin/src/main/resources/htmlgenerator/css/main.css
@@ -213,3 +213,7 @@ ul {
 
   text-align:center;
 }
+
+.group ul li {
+	display: block;
+}
